# RiVIS

./: .gitignore  CMakeLists.txt  ReadMe.md
.github/workflows/: cmake-single-platform.yml  ubuntu-build-and-test.yml
design/: ReadMe.md
fig/: isa.puml
fig/MVP/: MVP_comp_diag.puml  MVP_softSimRun.puml
fig/ideal/: comp_diag.puml
src/: CMakeLists.txt  isaSimSoft.c  isaSimSoft.h  main.c  rv32i.c  rv32i.h
src/cli/: CMakeLists.txt  cli.c  cli.h
src/fileutils/: CMakeLists.txt  fileutils.c  fileutils.h
src/isa/: CMakeLists.txt  rv32i.c  rv32i.h
src/simulators/: CMakeLists.txt  isaSimSoft.c  simSoft.c  simSoft.h
test/: CMakeLists.txt  ReadMe.md  cli_test.cpp  fileutils_test.cpp  rv32i_test.cpp  test_rv32i.cpp  testfiles_LICENSE.txt
test/systemTest/: CMakeLists.txt  DiffTest.sh
test/systemTest/task3/: loop.c
